--- a/Udemy/RestAPIApplication/pom.xml
+++ b/Udemy/RestAPIApplication/pom.xml
@@ -8,15 +8,19 @@
 		<version>3.2.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.project</groupId>
-	<artifactId>TodoApp</artifactId>
+	<groupId>com.restapi</groupId>
+	<artifactId>RestAPIApplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>TodoApp</name>
-	<description>ToDo List Application</description>
+	<name>RestAPIApplication</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -29,40 +33,16 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- This dependency is basically needed to run JSP pages in springboot! -->
-		<dependency>
-		<groupId>org.apache.tomcat.embed</groupId>
-		<artifactId>tomcat-embed-jasper</artifactId>
-		<scope>provided</scope>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp.jstl/jakarta.servlet.jsp.jstl-api -->
-		<dependency>
-			<groupId>jakarta.servlet.jsp.jstl</groupId>
-			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/glassfish-jstl -->
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>glassfish-jstl</artifactId>
-			<version>11.0.19</version>
-		</dependency>
-
-
-
-
-
-
 	</dependencies>
-
-
 
 	<build>
 		<plugins>
