--- a/Udemy/RestAPIApplication/src/main/resources/application.properties
+++ b/Udemy/RestAPIApplication/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.datasource.url=jdbc:h2:mem:testDB
 spring.datasource.password=1234
 spring.datasource.username=Aaditya
 
+
+# This is required to run the data.sql at the time of running application.
+spring.jpa.defer-datasource-initialization=true 
+
+# This helps to show the the fired queries on caonsole.
+spring.jpa.show-sql=true
